[package]
name = "daddy"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
rand = "0.9.1"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
webbrowser = "1.0.5"
